--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,15 @@
+sudo: false
 language: node_js
 node_js:
-- '5.11'
+  - '6'
 cache:
   directories:
-  - node_modules
+    - node_modules
 before_script:
-- npm prune
+  - npm prune
 after_success:
-- npm run coverage
-- npm run semantic-release
+  - npm run coverage
+  - npm run semantic-release
 branches:
   except:
   - /^v\d+\.\d+\.\d+$/
